created the brand colors

--- a/en/index_en.html
+++ b/en/index_en.html
@@ -66,7 +66,7 @@
         </p>
         <div class="flex items-center justify-center mt-10 gap-x-6">
           <a href="#clenstvi"
-            class="rounded-md bg-indigo-500 px-3.5 py-2.5 text-sm font-semibold text-white shadow-xs hover:bg-indigo-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-400">Become a Member</a>
+            class="rounded-md bg-accent px-3.5 py-2.5 text-sm font-semibold text-white shadow-xs hover:bg-accent-600 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-accent-600">Become a Member</a>
           <a href="#o-nas" class="text-sm font-semibold leading-6 text-white">Learn more. <span
               aria-hidden="true">→</span></a>
         </div>
@@ -91,7 +91,7 @@
         <h2 class="text-2xl font-bold text-gray-900 lg:text-3xl ">What our Gym Looks Like</h2>
 
         <a href="gallery_en.html"
-          class="inline-flex items-center px-4 py-2 text-sm font-semibold text-center text-gray-500 transition duration-100 bg-white border rounded-lg outline-hidden ring-indigo-300 hover:bg-gray-100 focus-visible:ring-3 active:bg-gray-200 md:px-8 md:py-3 md:text-base">
+          class="inline-flex items-center px-4 py-2 text-sm font-semibold text-center text-gray-500 transition duration-100 bg-white border rounded-lg outline-hidden ring-accent-600 hover:bg-gray-100 focus-visible:ring-3 active:bg-gray-200 md:px-8 md:py-3 md:text-base">
           More
           <svg class="w-6 h-6 ml-2" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
             <path fill-rule="evenodd"
@@ -168,7 +168,7 @@
   <section class="w-full py-24 sm:py-32" id="clenstvi">
     <div class="px-6 mx-auto max-w-7xl lg:px-8">
       <div class="max-w-4xl mx-auto text-center">
-        <h2 class="text-base font-semibold leading-7 text-indigo-600">
+        <h2 class="text-base font-semibold leading-7 text-accent">
           Membership Options
         </h2>
         <p class="mt-2 text-4xl font-bold tracking-tight text-gray-900 sm:text-5xl">
@@ -194,7 +194,7 @@
             </p>
             <ul role="list" class="mt-8 space-y-3 text-sm leading-6 text-gray-600">
               <li class="flex gap-x-3">
-                <svg class="flex-none w-5 h-6 text-indigo-600" viewBox="0 0 20 20" fill="currentColor"
+                <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor"
                   aria-hidden="true">
                   <path fill-rule="evenodd"
                     d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
@@ -203,7 +203,7 @@
                 Entry will be allowed after a prior phone appointment.
               </li>
               <li class="flex gap-x-3">
-                <svg class="flex-none w-5 h-6 text-indigo-600" viewBox="0 0 20 20" fill="currentColor"
+                <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor"
                   aria-hidden="true">
                   <path fill-rule="evenodd"
                     d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
@@ -212,7 +212,7 @@
                 The scheduled one-time entry can be cancelled up to 24 hours in advance, otherwise it is forfeited.
               </li>
               <li class="flex gap-x-3">
-                <svg class="flex-none w-5 h-6 text-indigo-600" viewBox="0 0 20 20" fill="currentColor"
+                <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor"
                   aria-hidden="true">
                   <path fill-rule="evenodd"
                     d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
@@ -223,7 +223,7 @@
             </ul>
           </div>
           <a href="https://buy.stripe.com/3csdRvfv02QpfhmdQS" aria-describedby="tier-freelancer"
-            class="block px-3 py-2 mt-8 text-sm font-semibold leading-6 text-center text-indigo-600 rounded-md focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 ring-1 ring-inset ring-indigo-200 hover:ring-indigo-300">Become a Member</a>
+            class="block px-3 py-2 mt-8 text-sm font-semibold leading-6 text-center rounded-md text-accent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-accent-600 ring-1 ring-inset ring-accent-600 hover:ring-accent-600">Become a Member</a>
         </div>
         <div
           class="flex flex-col justify-between p-8 bg-white rounded-3xl ring-1 ring-gray-200 xl:p-10 lg:mt-8 lg:rounded-b-none lg:rounded-t-none">
@@ -239,20 +239,20 @@
             </p>
             <ul role="list" class="mt-8 space-y-3 text-sm leading-6 text-gray-600">
               <li class="flex gap-x-3">
-                <svg class="flex-none w-5 h-6 text-indigo-600" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                   <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z" clip-rule="evenodd" />
                 </svg>
                 A trainer will contact you to schedule a session.
               </li>
               <li class="flex gap-x-3">
-                <svg class="flex-none w-5 h-6 text-indigo-600" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                   <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z" clip-rule="evenodd" />
                 </svg>
                 Please bring shoes that have not been exposed to outdoor conditions and a towel.
               </li>
             </ul>
           </div>
-          <a href="https://buy.stripe.com/aEU7t71Ea9eNd9e6os" aria-describedby="tier-single-entry-trainer" class="block px-3 py-2 mt-8 text-sm font-semibold leading-6 text-center text-indigo-600 rounded-md focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 ring-1 ring-inset ring-indigo-200 hover:ring-indigo-300">Become a Member</a>
+          <a href="https://buy.stripe.com/aEU7t71Ea9eNd9e6os" aria-describedby="tier-single-entry-trainer" class="block px-3 py-2 mt-8 text-sm font-semibold leading-6 text-center rounded-md text-accent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-accent-600 ring-1 ring-inset ring-accent-600 hover:ring-accent-600">Become a Member</a>
         </div>
         <div
           class="flex flex-col justify-between p-8 bg-white rounded-3xl ring-1 ring-gray-200 xl:p-10 lg:mt-8 lg:rounded-l-none">
@@ -271,7 +271,7 @@
             </p>
             <ul role="list" class="mt-8 space-y-3 text-sm leading-6 text-gray-600">
               <li class="flex gap-x-3">
-                <svg class="flex-none w-5 h-6 text-indigo-600" viewBox="0 0 20 20" fill="currentColor"
+                <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor"
                   aria-hidden="true">
                   <path fill-rule="evenodd"
                     d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
@@ -280,7 +280,7 @@
                 Please bring shoes that have not been exposed to outdoor conditions and a towel.
               </li>
               <li class="flex gap-x-3">
-                <svg class="flex-none w-5 h-6 text-indigo-600" viewBox="0 0 20 20" fill="currentColor"
+                <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor"
                   aria-hidden="true">
                   <path fill-rule="evenodd"
                     d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
@@ -289,7 +289,7 @@
                 Self-service entry.
               </li>
               <li class="flex gap-x-3">
-                <svg class="flex-none w-5 h-6 text-indigo-600" viewBox="0 0 20 20" fill="currentColor"
+                <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor"
                   aria-hidden="true">
                   <path fill-rule="evenodd"
                     d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
@@ -298,7 +298,7 @@
                 If you don't like it, you can cancel your membership within 24 hours with no charge.
               </li>
               <li class="flex gap-x-3">
-                <svg class="flex-none w-5 h-6 text-indigo-600" viewBox="0 0 20 20" fill="currentColor"
+                <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor"
                   aria-hidden="true">
                   <path fill-rule="evenodd"
                     d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
@@ -309,7 +309,7 @@
             </ul>
           </div>
           <a href="https://buy.stripe.com/eVa28N1Eadv31qwbII" aria-describedby="tier-enterprise"
-            class="block px-3 py-2 mt-8 text-sm font-semibold leading-6 text-center text-indigo-600 rounded-md focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 ring-1 ring-inset ring-indigo-200 hover:ring-indigo-300">Become a Member</a>
+            class="block px-3 py-2 mt-8 text-sm font-semibold leading-6 text-center rounded-md text-accent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-accent-600 ring-1 ring-inset ring-accent-600 hover:ring-accent-600">Become a Member</a>
         </div>
       </div>
     </div>
@@ -320,10 +320,10 @@
       <h2 class="text-2xl font-bold leading-10 tracking-tight text-gray-900">
         Frequently Asked Questions
       </h2>
-      <p class="max-w-2xl mt-6 text-base leading-7 text-gray-600">
+        <p class="max-w-2xl mt-6 text-base leading-7 text-gray-600">
         Didn't get all your answers? Contact us
         <a href="mailto:olympiagymcz@gmail.com?subject=Olympia Gym - Inquiry from website"
-          class="font-semibold text-indigo-600 hover:text-indigo-500">by email</a>
+          class="font-semibold text-accent hover:text-accent-600">by email</a>
         and we'll get back to you as soon as possible.
       </p>
       <div class="mt-20">
@@ -395,7 +395,7 @@
         </a>
       </div>
       <div class="mt-8 md:order-1 md:mt-0">
-        <a class="text-xs leading-5 text-center text-gray-500 underline hover:text-purple-600"
+        <a class="text-xs leading-5 text-center text-gray-500 underline hover:text-accent-600"
           href="https://en.mapy.cz/s/luhovaroga">
           &copy; 2024 OlympiaGym Ltd., Ludvíka Podéště 1974/25, Ostrava - Poruba, 708 00
           Ostrava, Company ID 21316341
@@ -405,7 +405,7 @@
   </footer>
 
   <button id="to-top-button" onclick="goToTop()" title="Go To Top"
-    class="fixed z-50 hidden p-4 text-lg font-semibold text-white transition-colors duration-300 bg-purple-600 border-0 rounded-full shadow-md bottom-10 left-10 w-14 h-14 hover:bg-purple-700">
+    class="fixed z-50 hidden p-4 text-lg font-semibold text-white transition-colors duration-300 border-0 rounded-full shadow-md bg-accent bottom-10 left-10 w-14 h-14 hover:bg-accent-600">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6">
         <path d="M12 4l8 8h-6v8h-4v-8H4l8-8z" />
     </svg>
