--- a/rules.html
+++ b/rules.html
@@ -185,7 +185,7 @@
         </a>
       </div>
       <div class="mt-8 md:order-1 md:mt-0">
-        <a class="text-xs leading-5 text-center text-gray-500 underline hover:text-purple-600"
+        <a class="text-xs leading-5 text-center text-gray-500 underline hover:text-accent-600"
           href="https://en.mapy.cz/s/luhovaroga">
           &copy; 2024 OlympiaGym s.r.o., Ludvíka Podéště 1974/25, Ostrava - Poruba, 708 00
           Ostrava, IČO 21316341
