--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             </ul>
           </div>
           <a href="https://buy.stripe.com/3csdRvfv02QpfhmdQS" aria-describedby="tier-freelancer"
-            class="block px-3 py-2 mt-8 text-sm font-semibold leading-6 text-center text-accent rounded-md focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-accent-600 ring-1 ring-inset ring-accent-600 hover:ring-accent-600">Stát
+            class="block px-3 py-2 mt-8 text-sm font-semibold leading-6 text-center rounded-md text-accent focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-accent-600 ring-1 ring-inset ring-accent-600 hover:ring-accent-600">Stát
             se členem</a>
         </div>
         <div
@@ -243,20 +243,20 @@
             </p>
             <ul role="list" class="mt-8 space-y-3 text-sm leading-6 text-gray-600">
               <li class="flex gap-x-3">
-                <svg class="flex-none w-5 h-6 text-indigo-600" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                   <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z" clip-rule="evenodd" />
                 </svg>
                 Trenér se vám ozve a domluví si s vámi termín tréninku
               </li>
               <li class="flex gap-x-3">
-                <svg class="flex-none w-5 h-6 text-indigo-600" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                   <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z" clip-rule="evenodd" />
                 </svg>
                 S sebou obuv ktera nepřišla do kontaktu s venkovním prostředím a ručník.
               </li>
             </ul>
           </div>
-          <a href="https://buy.stripe.com/aEU7t71Ea9eNd9e6os" aria-describedby="tier-single-entry-trainer" class="block px-3 py-2 mt-8 text-sm font-semibold leading-6 text-center text-accent rounded-md focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-accent-600 ring-1 ring-inset ring-accent-600 hover:ring-accent-600">Stát se členem</a>
+          <a href="https://buy.stripe.com/aEU7t71Ea9eNd9e6os" aria-describedby="tier-single-entry-trainer" class="block px-3 py-2 mt-8 text-sm font-semibold leading-6 text-center rounded-md text-accent focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-accent-600 ring-1 ring-inset ring-accent-600 hover:ring-accent-600">Stát se členem</a>
         </div>
         <div
           class="flex flex-col justify-between p-8 bg-white rounded-3xl ring-1 ring-gray-200 xl:p-10 lg:mt-8 lg:rounded-l-none">
@@ -302,7 +302,7 @@
                 Pokud se vám u nás nebude líbit, <br> můžete do 24 hodin zrušit členství bez jakéhokoli poplatku.
               </li>
               <li class="flex gap-x-3">
-                <svg class="flex-none w-5 h-6 text-indigo-600" viewBox="0 0 20 20" fill="currentColor"
+                <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor"
                   aria-hidden="true">
                   <path fill-rule="evenodd"
                     d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
@@ -313,7 +313,7 @@
             </ul>
           </div>
           <a href="https://buy.stripe.com/eVa28N1Eadv31qwbII" aria-describedby="tier-enterprise"
-            class="block px-3 py-2 mt-8 text-sm font-semibold leading-6 text-center text-accent rounded-md focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-accent-600 ring-1 ring-inset ring-accent-600 hover:ring-accent-600">Stát
+            class="block px-3 py-2 mt-8 text-sm font-semibold leading-6 text-center rounded-md text-accent focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-accent-600 ring-1 ring-inset ring-accent-600 hover:ring-accent-600">Stát
             se členem</a>
         </div>
       </div>
@@ -417,7 +417,7 @@
   </footer>
 
   <button id="to-top-button" onclick="goToTop()" title="Go To Top"
-    class="fixed z-50 hidden p-4 text-lg font-semibold text-white transition-colors duration-300 bg-accent border-0 rounded-full shadow-md bottom-10 left-10 w-14 h-14 hover:bg-accent-600">
+    class="fixed z-50 hidden p-4 text-lg font-semibold text-white transition-colors duration-300 border-0 rounded-full shadow-md bg-accent bottom-10 left-10 w-14 h-14 hover:bg-accent-600">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6">
         <path d="M12 4l8 8h-6v8h-4v-8H4l8-8z" />
     </svg>
