created the brand colors (#2)
* created the brand colors

* updated accent

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </p>
         <div class="flex items-center justify-center mt-10 gap-x-6">
           <a href="#clenstvi"
-            class="rounded-md bg-indigo-500 px-3.5 py-2.5 text-sm font-semibold text-white shadow-xs hover:bg-indigo-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-400">Stát
+            class="rounded-md bg-accent px-3.5 py-2.5 text-sm font-semibold text-white shadow-xs hover:bg-accent-600 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-accent-600">Stát
             se členem</a>
           <a href="#o-nas" class="text-sm font-semibold leading-6 text-white">Zjistit více. <span
               aria-hidden="true">→</span></a>
@@ -92,7 +92,7 @@
         <h2 class="text-2xl font-bold text-gray-900 lg:text-3xl">Jak to u nás vypadá</h2>
 
         <a href="gallery.html"
-          class="inline-flex items-center px-4 py-2 text-sm font-semibold text-center text-gray-500 transition duration-100 bg-white border rounded-lg outline-hidden ring-indigo-300 hover:bg-gray-100 focus-visible:ring-3 active:bg-gray-200 md:px-8 md:py-3 md:text-base">
+          class="inline-flex items-center px-4 py-2 text-sm font-semibold text-center text-gray-500 transition duration-100 bg-white border rounded-lg outline-hidden ring-accent-600 hover:bg-gray-100 focus-visible:ring-3 active:bg-gray-200 md:px-8 md:py-3 md:text-base">
           Více
           <svg class="w-6 h-6 ml-2" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
             <path fill-rule="evenodd"
@@ -169,7 +169,7 @@
   <section class="w-full py-24 sm:py-32" id="clenstvi">
     <div class="px-6 mx-auto max-w-7xl lg:px-8">
       <div class="max-w-4xl mx-auto text-center">
-        <h2 class="text-base font-semibold leading-7 text-indigo-600">
+  <h2 class="text-base font-semibold leading-7 text-accent">
           Možnosti členství
         </h2>
         <p class="mt-2 text-4xl font-bold tracking-tight text-gray-900 sm:text-5xl">
@@ -197,7 +197,7 @@
             </p>
             <ul role="list" class="mt-8 space-y-3 text-sm leading-6 text-gray-600">
               <li class="flex gap-x-3">
-                <svg class="flex-none w-5 h-6 text-indigo-600" viewBox="0 0 20 20" fill="currentColor"
+                <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor"
                   aria-hidden="true">
                   <path fill-rule="evenodd"
                     d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
@@ -206,7 +206,7 @@
                 Vstup Vám bude umožněn po předchozí telefonické domluvě.
               </li>
               <li class="flex gap-x-3">
-                <svg class="flex-none w-5 h-6 text-indigo-600" viewBox="0 0 20 20" fill="currentColor"
+                <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor"
                   aria-hidden="true">
                   <path fill-rule="evenodd"
                     d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
@@ -215,7 +215,7 @@
                 Domluvený termín jednorázového vstupu je možné zrušit nejpozději 24 hodin předem, jinak vstup propadá.
               </li>
               <li class="flex gap-x-3">
-                <svg class="flex-none w-5 h-6 text-indigo-600" viewBox="0 0 20 20" fill="currentColor"
+                <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor"
                   aria-hidden="true">
                   <path fill-rule="evenodd"
                     d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
@@ -226,7 +226,7 @@
             </ul>
           </div>
           <a href="https://buy.stripe.com/3csdRvfv02QpfhmdQS" aria-describedby="tier-freelancer"
-            class="block px-3 py-2 mt-8 text-sm font-semibold leading-6 text-center text-indigo-600 rounded-md focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 ring-1 ring-inset ring-indigo-200 hover:ring-indigo-300">Stát
+            class="block px-3 py-2 mt-8 text-sm font-semibold leading-6 text-center rounded-md text-accent focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-accent-600 ring-1 ring-inset ring-accent-600 hover:ring-accent-600">Stát
             se členem</a>
         </div>
         <div
@@ -243,20 +243,20 @@
             </p>
             <ul role="list" class="mt-8 space-y-3 text-sm leading-6 text-gray-600">
               <li class="flex gap-x-3">
-                <svg class="flex-none w-5 h-6 text-indigo-600" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                   <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z" clip-rule="evenodd" />
                 </svg>
                 Trenér se vám ozve a domluví si s vámi termín tréninku
               </li>
               <li class="flex gap-x-3">
-                <svg class="flex-none w-5 h-6 text-indigo-600" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                   <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z" clip-rule="evenodd" />
                 </svg>
                 S sebou obuv ktera nepřišla do kontaktu s venkovním prostředím a ručník.
               </li>
             </ul>
           </div>
-          <a href="https://buy.stripe.com/aEU7t71Ea9eNd9e6os" aria-describedby="tier-single-entry-trainer" class="block px-3 py-2 mt-8 text-sm font-semibold leading-6 text-center text-indigo-600 rounded-md focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 ring-1 ring-inset ring-indigo-200 hover:ring-indigo-300">Stát se členem</a>
+          <a href="https://buy.stripe.com/aEU7t71Ea9eNd9e6os" aria-describedby="tier-single-entry-trainer" class="block px-3 py-2 mt-8 text-sm font-semibold leading-6 text-center rounded-md text-accent focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-accent-600 ring-1 ring-inset ring-accent-600 hover:ring-accent-600">Stát se členem</a>
         </div>
         <div
           class="flex flex-col justify-between p-8 bg-white rounded-3xl ring-1 ring-gray-200 xl:p-10 lg:mt-8 lg:rounded-l-none">
@@ -275,7 +275,7 @@
             </p>
             <ul role="list" class="mt-8 space-y-3 text-sm leading-6 text-gray-600">
               <li class="flex gap-x-3">
-                <svg class="flex-none w-5 h-6 text-indigo-600" viewBox="0 0 20 20" fill="currentColor"
+                <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor"
                   aria-hidden="true">
                   <path fill-rule="evenodd"
                     d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
@@ -284,7 +284,7 @@
                 S sebou obuv ktera nepřišla do kontaktu s venkovním prostředím a ručník.
               </li>
               <li class="flex gap-x-3">
-                <svg class="flex-none w-5 h-6 text-indigo-600" viewBox="0 0 20 20" fill="currentColor"
+                <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor"
                   aria-hidden="true">
                   <path fill-rule="evenodd"
                     d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
@@ -293,7 +293,7 @@
                 Samoobslužný vstup.
               </li>
               <li class="flex gap-x-3">
-                <svg class="flex-none w-5 h-6 text-indigo-600" viewBox="0 0 20 20" fill="currentColor"
+                <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor"
                   aria-hidden="true">
                   <path fill-rule="evenodd"
                     d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
@@ -302,7 +302,7 @@
                 Pokud se vám u nás nebude líbit, <br> můžete do 24 hodin zrušit členství bez jakéhokoli poplatku.
               </li>
               <li class="flex gap-x-3">
-                <svg class="flex-none w-5 h-6 text-indigo-600" viewBox="0 0 20 20" fill="currentColor"
+                <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor"
                   aria-hidden="true">
                   <path fill-rule="evenodd"
                     d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
@@ -313,7 +313,7 @@
             </ul>
           </div>
           <a href="https://buy.stripe.com/eVa28N1Eadv31qwbII" aria-describedby="tier-enterprise"
-            class="block px-3 py-2 mt-8 text-sm font-semibold leading-6 text-center text-indigo-600 rounded-md focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 ring-1 ring-inset ring-indigo-200 hover:ring-indigo-300">Stát
+            class="block px-3 py-2 mt-8 text-sm font-semibold leading-6 text-center rounded-md text-accent focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-accent-600 ring-1 ring-inset ring-accent-600 hover:ring-accent-600">Stát
             se členem</a>
         </div>
       </div>
@@ -328,7 +328,7 @@
       <p class="max-w-2xl mt-6 text-base leading-7 text-gray-600">
         Není zde odpovězeno vše? Kontaktujte nás
         <a href="mailto:olympiagymcz@gmail.com?subject=Olympia Gym - dotaz z webu"
-          class="font-semibold text-indigo-600 hover:text-indigo-500">na email</a>
+          class="font-semibold text-accent hover:text-accent-600">na email</a>
         a my se ozveme tak rychle jak zvládneme.
       </p>
       <div class="mt-20">
@@ -407,7 +407,7 @@
         </a>
       </div>
       <div class="mt-8 md:order-1 md:mt-0">
-        <a class="text-xs leading-5 text-center text-gray-500 underline hover:text-purple-600"
+        <a class="text-xs leading-5 text-center text-gray-500 underline hover:text-accent-600"
           href="https://en.mapy.cz/s/luhovaroga">
           &copy; 2024 OlympiaGym s.r.o., Ludvíka Podéště 1974/25, Ostrava - Poruba, 708 00
           Ostrava, IČO 21316341
@@ -417,7 +417,7 @@
   </footer>
 
   <button id="to-top-button" onclick="goToTop()" title="Go To Top"
-    class="fixed z-50 hidden p-4 text-lg font-semibold text-white transition-colors duration-300 bg-purple-600 border-0 rounded-full shadow-md bottom-10 left-10 w-14 h-14 hover:bg-purple-700">
+    class="fixed z-50 hidden p-4 text-lg font-semibold text-white transition-colors duration-300 border-0 rounded-full shadow-md bg-accent bottom-10 left-10 w-14 h-14 hover:bg-accent-600">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6">
         <path d="M12 4l8 8h-6v8h-4v-8H4l8-8z" />
     </svg>
