--- a/en/gallery_en.html
+++ b/en/gallery_en.html
@@ -35,18 +35,18 @@
           <img class="w-auto h-8" src="/static/images/favicon.png" alt="" />
         </a>
       </div>
-      <div class="flex gap-x-2 md:gap-x-12 max-xs:order-last max-xs:basis-full max-xs:justify-around">
+      <div class="flex items-center gap-x-2 md:gap-x-12 max-xs:order-last max-xs:basis-full max-xs:justify-around">
         <a href="index_en.html#clenstvi" class="text-sm font-semibold leading-6 text-white">Membership</a>
         <a href="index_en.html#faq" class="text-sm font-semibold leading-6 text-white">FAQ</a>
         <a href="gallery_en.html" class="text-sm font-semibold leading-6 text-white">Gallery</a>
         <a href="rules_en.html" class="text-sm font-semibold leading-6 text-white">Rules</a>
         <a href="contact_en.html" class="text-sm font-semibold leading-6 text-white">Contact</a>
       </div>
-      <div class="flex justify-end gap-x-2 grow shrink-0 basis-1/3">
+      <div class="flex items-center justify-end gap-x-2 grow shrink-0 basis-1/3">
         <a href="../index.html"
           class="text-sm font-semibold leading-6 text-white">CZ<span aria-hidden="true">🇨🇿</span></a>
         <a href="https://billing.stripe.com/p/login/4gw4k7dK80WC6Z2eUU"
-          class="text-sm font-semibold leading-6 text-white">Membership Management<span aria-hidden="true">&rarr;</span></a>
+          class="rounded-md bg-accent px-3.5 py-2.5 text-sm font-semibold text-white shadow-xs hover:bg-accent-600 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-accent-600">Membership Management<span aria-hidden="true">&rarr;</span></a>
       </div>
     </nav>
   </header>
