--- a/gallery.html
+++ b/gallery.html
@@ -35,18 +35,18 @@
           <img class="w-auto h-8" src="/static/images/favicon.png" alt="" />
         </a>
       </div>
-      <div class="flex gap-x-2 md:gap-x-12 max-xs:order-last max-xs:basis-full max-xs:justify-around">
+      <div class="flex items-center gap-x-2 md:gap-x-12 max-xs:order-last max-xs:basis-full max-xs:justify-around">
         <a href="index.html#clenstvi" class="text-sm font-semibold leading-6 text-white">Členství</a>
         <a href="index.html#faq" class="text-sm font-semibold leading-6 text-white">FAQ</a>
         <a href="gallery.html" class="text-sm font-semibold leading-6 text-white">Galerie</a>
         <a href="rules.html" class="text-sm font-semibold leading-6 text-white">Provozní řád</a>
         <a href="contact.html" class="text-sm font-semibold leading-6 text-white">Kontakt</a>
       </div>
-      <div class="flex justify-end gap-x-2 grow shrink-0 basis-1/3">
+      <div class="flex items-center justify-end gap-x-2 grow shrink-0 basis-1/3">
         <a href="en/index_en.html"
           class="text-sm font-semibold leading-6 text-white">EN<span aria-hidden="true">🇬🇧</span></a>
         <a href="https://billing.stripe.com/p/login/4gw4k7dK80WC6Z2eUU"
-          class="text-sm font-semibold leading-6 text-white">Správa členství<span aria-hidden="true">&rarr;</span></a>
+          class="rounded-md bg-accent px-3.5 py-2.5 text-sm font-semibold text-white shadow-xs hover:bg-accent-600 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-accent-600">Správa členství<span aria-hidden="true">&rarr;</span></a>
       </div>
     </nav>
   </header>
