--- a/en/index_en.html
+++ b/en/index_en.html
@@ -29,7 +29,7 @@
   <header class="absolute inset-x-0 top-0 z-50">
     <nav class="flex flex-wrap items-center justify-between p-6 px-8 xs:flex-nowrap whitespace-nowrap"
       aria-label="Global">
-      <div class="flex grow shrink-0 basis-1/3">
+      <div class="flex grow">
         <a href="/" class="-m-1.5 p-1.5">
           <span class="sr-only">Olympia Gym</span>
           <img class="w-auto h-8" src="/static/images/favicon.png" alt="" />
