--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
             <a href="contact.html"
               class="justify-center px-4 py-2 text-sm font-semibold text-white rounded-md bg-accent hover:bg-accent-600">Kontaktovat
               nás</a>
-            <a href="mailto:olympiagymcz@gmail.com?subject=Studentská sleva"
+            <a href="mailto:olympiagymcz@gmail.com?subject=Referall program"
               class="ml-4 text-sm font-medium leading-6 text-gray-700 underline">Napsat email</a>
           </div>
         </div>
