--- a/en/index_en.html
+++ b/en/index_en.html
@@ -315,6 +315,56 @@
     </div>
   </section>
 
+  <!-- Locker rental section (translated from Czech site) -->
+  <section class="w-full py-16 sm:py-8" id="additional-services">
+    <div class="px-6 mx-auto max-w-7xl lg:px-8">
+      <div class="max-w-4xl mx-auto text-center">
+        <h2 class="text-base font-semibold leading-7 text-accent">Additional services</h2>
+        <p class="mt-2 text-4xl font-bold tracking-tight text-gray-900 sm:text-5xl">Locker rental</p>
+      </div>
+
+      <div class="max-w-3xl mx-auto mt-12">
+        <div class="p-8 bg-white rounded-2xl ring-1 ring-gray-200">
+          <div class="flex items-center justify-between gap-x-4">
+            <h3 class="text-lg font-semibold leading-8 text-gray-900">Personal locker</h3>
+            <span class="px-3 py-1 text-sm font-medium rounded-full bg-accent/10 text-accent">200 Kč/month</span>
+          </div>
+
+          <p class="mt-4 text-sm leading-6 text-gray-600">
+            Don't want to bring your stuff every time you come to train? Rent a personal locker and keep your
+            gear securely stored at our gym.
+          </p>
+
+          <ul role="list" class="mt-6 space-y-3 text-sm leading-6 text-gray-600">
+            <li class="flex gap-x-3">
+              <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z" clip-rule="evenodd" />
+              </svg>
+              Secure storage for workout clothes, towels and other equipment
+            </li>
+            <li class="flex gap-x-3">
+              <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z" clip-rule="evenodd" />
+              </svg>
+              Lockers are under camera surveillance.
+            </li>
+            <li class="flex gap-x-3">
+              <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z" clip-rule="evenodd" />
+              </svg>
+              Limited number of lockers - reserve yours as soon as possible
+            </li>
+          </ul>
+
+          <div class="mt-8">
+            <a href="https://buy.stripe.com/8x27sKgZv4N35E77WK43S05" class="justify-center px-4 py-2 text-sm font-semibold text-white rounded-md bg-accent hover:bg-accent-600">Rent a locker</a>
+            <a href="mailto:olympiagymcz@gmail.com?subject=Locker%20rental" class="ml-4 text-sm font-medium leading-6 text-gray-700 underline">Send email</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <section class="w-full" id="discount">
     <div class="px-6 mx-auto max-w-7xl lg:px-8">
       <div class="max-w-4xl mx-auto text-center">
