--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     </div>
   </section>
 
-  <section class="w-full py-24 sm:py-32" id="clenstvi">
+  <section class="w-full py-16 sm:py-8" id="clenstvi">
     <div class="px-6 mx-auto max-w-7xl lg:px-8">
       <div class="max-w-4xl mx-auto text-center">
         <h2 class="text-base font-semibold leading-7 text-accent">
@@ -179,7 +179,8 @@
       </div>
       <p class="max-w-2xl mx-auto mt-6 text-lg leading-8 text-center text-gray-600">
         Jsme privátní fitness centrum, které je otevřeno 24/7. Abychom mohli nabídnout maximální pohodlí a bezpečí,
-        neumožňujeme vstup do centra bez předchozí registrace, zaplacení členství a vstupní prohlídky. Díky tomu můžeme zajistit, že
+        neumožňujeme vstup do centra bez předchozí registrace, zaplacení členství a vstupní prohlídky. Díky tomu můžeme
+        zajistit, že
         fitness centrum nebude přeplněné a bude dostatek prostoru pro všechny.
       </p>
       <div
@@ -321,7 +322,66 @@
     </div>
   </section>
 
-  <section class="w-full" id="discount">
+  <!-- ...existing code... after the discount section... -->
+  <section class="w-full py-16 sm:py-8" id="additional-services">
+    <div class="px-6 mx-auto max-w-7xl lg:px-8">
+      <div class="max-w-4xl mx-auto text-center">
+        <h2 class="text-base font-semibold leading-7 text-accent">Dodatečné služby</h2>
+        <p class="mt-2 text-4xl font-bold tracking-tight text-gray-900 sm:text-5xl">Pronájem skříněk</p>
+      </div>
+
+      <div class="max-w-3xl mx-auto mt-12">
+        <div class="p-8 bg-white rounded-2xl ring-1 ring-gray-200">
+          <div class="flex items-center justify-between gap-x-4">
+            <h3 class="text-lg font-semibold leading-8 text-gray-900">Osobní skříňka</h3>
+            <span class="px-3 py-1 text-sm font-medium rounded-full bg-accent/10 text-accent">200 Kč/měsíc</span>
+          </div>
+
+          <p class="mt-4 text-sm leading-6 text-gray-600">
+            Nechcete s sebou nosit věci pokaždé, když jdete cvičit? Pronajměte si osobní skříňku a nechte si své
+            vybavení bezpečně uložené v našem fitness centru.
+          </p>
+
+          <ul role="list" class="mt-6 space-y-3 text-sm leading-6 text-gray-600">
+            <li class="flex gap-x-3">
+              <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                <path fill-rule="evenodd"
+                  d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
+                  clip-rule="evenodd" />
+              </svg>
+              Bezpečné uložení cvičebního oblečení, ručníků a dalšího vybavení
+            </li>
+            <li class="flex gap-x-3">
+              <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                <path fill-rule="evenodd"
+                  d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
+                  clip-rule="evenodd" />
+              </svg>
+              Skříňky jsou pod dohledem kamery.
+            </li>
+            <li class="flex gap-x-3">
+              <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                <path fill-rule="evenodd"
+                  d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
+                  clip-rule="evenodd" />
+              </svg>
+              Omezený počet skříněk - rezervujte si svoji co nejdříve
+            </li>
+          </ul>
+
+          <div class="mt-8">
+            <a href="https://buy.stripe.com/8x27sKgZv4N35E77WK43S05"
+              class="justify-center px-4 py-2 text-sm font-semibold text-white rounded-md bg-accent hover:bg-accent-600">Pronajmout
+              skříňku</a>
+            <a href="mailto:olympiagymcz@gmail.com?subject=Pronájem skříňky"
+              class="ml-4 text-sm font-medium leading-6 text-gray-700 underline">Napsat email</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="w-full py-16 sm:py-8" id="discount">
     <div class="px-6 mx-auto max-w-7xl lg:px-8">
       <div class="max-w-4xl mx-auto text-center">
         <h2 class="text-base font-semibold leading-7 text-accent">Speciální nabídky</h2>
@@ -329,7 +389,8 @@
       </div>
 
       <p class="max-w-2xl mx-auto mt-6 text-lg leading-8 text-center text-gray-600">Nabízíme výhodné slevy pro studenty
-        a věrnostní program pro členy, kteří přivedou nové členy. Máte-li zájem, kontaktujte nás a rádi vše vysvětlíme.</p>
+        a věrnostní program pro členy, kteří přivedou nové členy. Máte-li zájem, kontaktujte nás a rádi vše vysvětlíme.
+      </p>
 
       <div class="grid max-w-3xl grid-cols-1 gap-8 mx-auto mt-12 lg:grid-cols-2">
         <!-- Student discount -->
@@ -379,8 +440,7 @@
           <div>
             <div class="flex items-center justify-between gap-x-4">
               <h3 class="text-lg font-semibold leading-8 text-gray-900">Referenční program</h3>
-              <span
-                class="px-3 py-1 text-sm font-medium rounded-full bg-accent/10 text-accent">-100
+              <span class="px-3 py-1 text-sm font-medium rounded-full bg-accent/10 text-accent">-100
                 Kč/člen</span>
             </div>
 
@@ -404,7 +464,7 @@
                 </svg>
                 Slevy se mohou sčítat. Ano můžete chodit zdarma.
               </li>
-               <li class="flex gap-x-3">
+              <li class="flex gap-x-3">
                 <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                   <path fill-rule="evenodd"
                     d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
@@ -486,6 +546,18 @@
             <dd class="mt-2 text-base leading-7 text-gray-600">
               Nejsou. Všechny ostatní prostory jsou však monitorovány
               kamerami.
+            </dd>
+          </div>
+          <div>
+            <dt class="text-base font-semibold leading-7 text-gray-900">
+              Mohu si pronajmout skříňku?
+            </dt>
+            <dd class="mt-2 text-base leading-7 text-gray-600">
+              Ano, nabízíme možnost pronájmu osobních skříněk. Za měsíční poplatek 200 Kč si můžete pronajmout
+              uzamykatelnou skříňku
+              a nemusíte tak nosit své věci pokaždé domů. Skříňky jsou bezpečné a přístupné pouze během vašich návštěv
+              fitness centra.
+              Pro pronájem kontaktujte obsluhu při vaší první návštěvě nebo nám napište e-mail.
             </dd>
           </div>
           <!-- More questions... -->
