--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
               uzamykatelnou skříňku
               a nemusíte tak nosit své věci pokaždé domů. Skříňky jsou bezpečné a přístupné pouze během vašich návštěv
               fitness centra.
-              Pro pronájem kontaktujte obsluhu při vaší první návštěvě nebo nám napište e-mail.
+              Pro pronájem kontaktujte využijte tlačítko výše nebo nám napište na email.
             </dd>
           </div>
           <!-- More questions... -->
